assets/css/navstyle.scss
---
---
// This variable, set in _config.yml, determines at what width the screen will shift from widescreen layout to mobile (narrow) screen layout.
$mob-pixels: {{ site.breakpoint }};
@import "font";
@import "colors";
@import "animations";


//   Table of contents:
// 
//   First, this CSS codes the narrow navigation (mobile)
//   It turns off widescreen headers and other elements
//   Then it styles:
// 
//   1) The hamburger menu (nav-toggle)
//   2) Mobile bird logo
//   3) The navigation and its links in mobile
//     i) Its ul, li, and then a and buttons
//   4) Styles the search bar in mobile
//   5) Dropdown menu styling
//   6) Intersectional observer that triggers the return to top button and the change of style in widescreen when scrolling.
// 
//   Wide header:
//   1) Starting with a media query
//   2) Turns off some narrow elements
//   3) Styles the wideheader
//   4) The navigation and its links in widescreen
//     i) Its ul, li, and then a and buttons
//   5) Styles the search bar in wide mode
//   6) Dropdown menu styling
//   7) Scroll anchors are fixed in widemode where the sticky header blocks anchored page elements (e.g. /about#chair)
// 
//   Breadcrumb menu

.chair {color: var(--chair)}
.heart {color: var(--heart)}
.leaf {color: var(--leaf)}

// These elements are for the wideheader only and so will be turned on with a media query
.wideheader,#widehome,#StickyScrollBegin,#StickyScrollBeginPadding,/*#searchsubmit,*/#unfold  {
   display: none;
}

.nav-toggle {
  position: absolute !important;
  top: -9999px !important;
  left: -9999px !important;

  &:focus ~ .nav-toggle-label {
    // outline: 3px solid rgba(lightblue, .75);
    outline: none;
  }
  &:hover ~ .nav-toggle-label {
    // color: grey;
    // transition: color .3s;
  }
}

.nav-toggle-label {
  display: flex;
  align-items: center;
  padding: 10px;
  cursor: pointer;
  position: relative;
  height: 55px;
  &:hover {
    background: var(--active);
  }

  span, span::before, span::after {
    display: block;
    background: var(--card-hover);
    height: 2px;
    width: 2rem;
    border-radius: 2px;
    position: relative;
    transition: transform 100ms ease-in-out,width 350ms ease-in-out;
  }

  span::before, span::after {
    content: '';
    position: absolute;
  }

  span::before {
    bottom: 7px;
  }

  span::after {
    top: 7px;
  }
}

.nav-toggle:checked ~ .navbar {
  transform: scale(1,1);
  transition: transform 400ms ease-in-out;

  a,button {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
  }
}

// Hamburger to X animation
.nav-toggle:checked ~ div .nav-toggle-label span {
   transform: rotate(45deg);
     height: 3px;
     width: 1rem;

   &::before {
     transform: translateY(6px)
                rotate(-90deg);
     width: 1rem;
   }
   &::after {
     transform: translateY(-6px)
                rotate(-90deg);
     width: 1rem;
   }
}

.logo {
  // z-index: 15;
  // Mobile bird logo
  &__mobile {
    // padding: 10px;
    display: flex;
    align-items: center;
    height: 55px;
    &:hover {
      background: var(--active);
    }
    img {
      vertical-align: text-bottom;
    }
  }
}

.navbar,.navbar input {
  -moz-appearance: none;
  -webkit-appearance: none;
  border-radius: 0;
  font: {
    size: $nav-font-size;
    family: $font-sans;
  }
  text-align: left;
}

.navbar {
  color: var(--alert-text);
  background: var(--color-1-dark);
  z-index: 5;
  position: absolute;
  font-weight: bold; 
  text-align: left;
  top: 55px;
  left: 0;
  width: 100%;
  transform: scale(1, 0);
  transform-origin: top;
  transition: transform 200ms ease-in-out;

  i {
    transition: transform 100ms ease-in;
    vertical-align: middle;
  }

  ul {
    padding-left: 0;
    background: inherit;
    // text-indent: 5px;
    li {
      display: inline;
      list-style: none;
      width: 100%;
      padding-left: 0;
      vertical-align: middle;
      background: inherit;
    }
  }
  a,button {
    display: inline-block;
    opacity: 0;
    color: var(--alert-text);
    text-decoration: none;
    font-weight: bold;
    border: none;
    padding: 14px 14px;
    transition: opacity 150ms ease-in-out;
    width: 100%;
    text-align: left;
    white-space: nowrap;
  }

  button.dropbtn {
    background: inherit
  }

  a:hover,.active,ul .dropdown .active, .dropdown ul li a:hover {
    background-color: var(--active);
  }
  // Search on narrow screens
  #searchForm {
    display: flex;
    align-items: center;
    position: relative;
    padding: 0 8px 0 5px;
  }
  #searchInput {
    //padding: 16px 10px;
    flex: 1 1 100%;
    height: 54px;
    border: none;
    text-indent: 0.6rem;
    background: var(--body-bg);
    color: var(--body-text);
  }
  #searchSubmit {
    flex: 0 1 2.5rem;
    height: 54px;
    // width: 100%;
    background: var(--color-1-light);
    cursor: pointer;
    // padding: 0;
    &:hover {
      background: var(--active);
    }
    i {
      vertical-align: initial;
    }
  }
  #languageChanger {
    cursor: pointer;
  }
}

.dropbtn {
  * {pointer-events: none;}
  &:focus {
    outline: none;
  }
}

// This code makes dropdown menus that are easy to open and close
{% assign langs = "en, fr" | split: ", " %}
{% for currentLang in langs %}
  {% assign counter = 0 %}
  {% if currentLang == "en" %}
    {% assign doclist = site.data.navigation.en %}
  {% endif %}
  {% if currentLang == "fr" %}
    {% assign doclist = site.data.navigation.fr %}
  {% endif %}
  {% for item in doclist %}
    {% if item.submenu %}
      {% assign counter = counter | plus: 1 %}
        #dropdown_{{ currentLang }}{{ counter }} {
        max-height: 0;
        overflow: hidden;
        transition: max-height .2s ease-out;
      }
    {% endif %}
  {% endfor %}
{% endfor %}

.dropdown-content {
  // box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  a  {
    color: var(--alert-text);
    display: block;
    // padding: 12px 14px;
    text-align: left;
    text-indent: 35px;
    background-color: var(--color-1);
    &:hover {
      background: var(--active); 
    }
  }
}

#narrowheader {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: clamp(5px, 15%, 55px) 1fr clamp(15px, 15%, 55px);
  place-items: center;
  background: var(--color-1-dark);
  color: var(--alert-text);
  text-decoration: none;
  text-align: center;
  // height: 55px;
  font: {
     size: $mobile-header-font-size;
     family: $font-serif;
  }

  // letter-spacing: $serif-spacing;
  // white-space: nowrap;
}

.intersectionObserver {
  background-color: transparent;
}

// for the topBtn
#intersectionObserver1 {
  position: absolute;
  top: 0px;
  height: 120vh;
  max-height: 400px;
  width: 0;
} 

// So that the menu changes colors
#intersectionObserver2 {
  height: 0px;
}

// WIDE screen
@media screen and (min-width: $mob-pixels) {

  // These elements are for the wideheader only and so will be turned on with a media query
  .wideheader,#widehome {
     display: block;
     opacity: 1;
  }

  #narrowhome,.nav-toggle-label,#narrowheader,.logo__mobile,#nav-toggle {
      display: none;
  }

  .wideheader {
    display: flex;
    padding: 40px 0px;
    justify-content: center;
    align-items: center;
    background: var(--wideheader-color);
    color: var(--wideheader-text);
    // overflow-y: hidden;
    animation: hide-scroll 1.2s backwards;
    @keyframes hide-scroll {
      from, to { overflow: hidden; } 
    }
    &__text {
      white-space: nowrap;
      font: {
        family: $font-serif;
        size: $header-font-size;}
      padding:20px 70px;
    }
  }


  .navbar {
    position: -moz-sticky;
    position: -ms-sticky;
    position: -o-sticky;
    position: -webkit-sticky;
    position: sticky;
    transform: scale(1,1);
    top: 0;
    background: var(--color-1);
    transition: background 150ms linear;
    // This changes the widescreen navbar color on scroll
    &.change_nav_color {
      transition: background 400ms linear;
      background-color: var(--color-1-dark);
    }
    a,button {
      opacity: 1;
      width: initial;
      height: 55px;
    }
    ul li {
      width: initial;
      display: inline-block;
    }
    ul {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: center;
      margin: 0;
    }

    // widescreen search
    #searchInput {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      width: 100%;
      // border-radius: 5px 0 0 5px;
      opacity: 0;
      cursor: pointer;
      height: 55px;
      z-index: 2;
      transition: left 450ms ease,
                  width 450ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
    }
    #searchSubmit {
      transition: color .3s ease, background .3s ease;
    }
    .search-container {
      position: relative;
    }
    #searchForm {
      padding: initial;
      --search-size: 51px;
      &:focus-within {
        outline: none;
        // overflow-y: hidden;
        //animation: hide-scroll 1.2s backwards;
        //@keyframes hide-scroll {
          //from, to { overflow: hidden; } 
        //}
        #searchInput {
          z-index: 1;
          opacity: 1;
          left: -210px;
          width: calc(100% - var(--search-size));
          width: 210px;
          &:focus {
            outline: none;
          }
        }
      } 
      &:not(:focus-within) {
        #searchInput {
          transition: left 200ms ease, width 200ms ease, opacity 0ms linear .2s, z-index 0ms linear .2s;
        }
      }
      &:hover #searchSubmit {
        color: var(--anti-alert-text);
      }
    }
    #searchSubmit {
      height: 55px;
      z-index: 1;
    }
    #search-container {
      margin-left: auto;
      height: 55px;
    }

    // Dropdown styling
    .dropdown > ul {
      display: block;
      position: absolute;
      top: 55px;
      background: inherit;
      li a {
        background: inherit;
      }
    }
    .dropdown-content {
      max-height: initial;
      display: block;
      a {
        text-indent: 0px;
      }
    }

  }
  // Keeping page anchors in the right place
  .scroll_anchor {
    scroll-margin: 60px 0 0 0;
  }
  .stanchor {
    position: relative;
    a {
      position: absolute;
      left: 0px;
      top: -60px;
    } 
  }
}
 

// Breadcrumb menu

ul.breadcrumb {
  padding: 10px 16px;
  list-style: none;
  background-color: var(--card-hover);
  margin: 0;
}
ul.breadcrumb li {
  display: inline;
  //font-size: $body-font-size;
  font-family: $font-sans;
  font-size: $nav-font-size;
  font-weight: bold;
}
ul.breadcrumb li+li:before {
  padding: 8px;
  content: "/\00a0";
}

